examples/test/testpolicy10909.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10909
  namespace: namespace61
spec:
  podSelector:
    matchLabels:
      key4: value4
      key12: value14
      key34: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value5
      podSelector:
        matchLabels:
          key43: value15
